--- a/public/about/index.html
+++ b/public/about/index.html
@@ -201,35 +201,13 @@
   <h2>About me and this site</h2>
 </div>
 <div class="content">
-  
+  <p>My hometown is Fort Pierre, South Dakota (furt peer, sous-dah-koh-dah is the accent laden pronunciation) , which is a small farming/ranching community on the banks of the Missouri River. I was one of the “city” kids in my class (i.e. not raised next to a cow on a farm). My graduating high school class consisted of 47 kids and I would still recognize every one of them today.</p>
 
-<p>Hugo is a static site engine written in Go.</p>
+<p>Currently a Data Scientist on the Development/Engineering Team at Domo in American Fork, UT. Domo&rsquo;s product connects a company&rsquo;s  people with the data they need to improve business results. My role is to leverage statistics and machine learning to make our product smarter and give our customers a 360 degree view of their data.</p>
 
-<p>It makes use of a variety of open source projects including:</p>
+<p>My educational background is a bit eclectic. I have degrees in History, Political Science, and Criminology along with a graduate certificate in Statistics. A common theme running through my undergraduate and master’s program was the Civil Rights Movement and constitutional law in the United States along with the addition of statistical methodology. The quantitative theme continued through my doctoral studies which focused on social networks, social influence and juvenile delinquency. My researched focused on quantifying and modeling the impact of various social network structures on adolescent behavior.</p>
 
-<ul>
-<li><a href="https://github.com/spf13/cobra">Cobra</a></li>
-<li><a href="https://github.com/spf13/viper">Viper</a></li>
-<li><a href="https://github.com/spf13/jWalterWeatherman">J Walter Weatherman</a></li>
-<li><a href="https://github.com/spf13/cast">Cast</a></li>
-</ul>
-
-<p>Learn more and contribute on <a href="https://github.com/spf13">GitHub</a>.</p>
-
-<h2 id="setup">Setup</h2>
-
-<p>Some fun facts about <a href="http://gohugo.io/">Hugo</a>:</p>
-
-<ul>
-<li>Built in <a href="http://golang.org/">Go</a></li>
-<li>Loosely inspired by <a href="http://jekyllrb.com/">Jekyll</a></li>
-<li>Primarily developed by <a href="http://spf13.com/">spf13</a> on the train while commuting to and from Manhattan.</li>
-<li>Coded in <a href="http://vim.org">Vim</a> using <a href="http://vim.spf13.com/">spf13-vim</a></li>
-</ul>
-
-<p>Have questions or suggestions? Feel free to <a href="https://github.com/spf13/hugo/issues/new">open an issue on GitHub</a> or <a href="https://twitter.com/spf13">ask me on Twitter</a>.</p>
-
-<p>Thanks for reading!</p>
+<p>You can find my list of academic publications can be found on my <a href="https://scholar.google.com/citations?user=ippq3CwAAAAJ&amp;hl=en">Google Scholar Profile</a></p>
 
 </div>
 
