--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
 
 <div class="header">
   <h1>Carter I. Rees, PhD</h1>
-  <h2>Subtitle Here</h2>
+  <h2>Your opinion of me is p &gt; 0.05</h2>
 </div>
 
 <div class="content">
