updated about page

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -207,7 +207,7 @@
 
 <p>My educational background is a bit eclectic. I have degrees in History, Political Science, and Criminology along with a graduate certificate in Statistics. A common theme running through my undergraduate and master’s program was the Civil Rights Movement and constitutional law in the United States along with the addition of statistical methodology. The quantitative theme continued through my doctoral studies which focused on social networks, social influence and juvenile delinquency. My researched focused on quantifying and modeling the impact of various social network structures on adolescent behavior.</p>
 
-<p>You can find my list of academic publications on <a href="https://scholar.google.com/citations?user=ippq3CwAAAAJ&amp;hl=en">Google Scholar Profile</a>.</p>
+<p>You can find my list of academic publications on my <a href="https://scholar.google.com/citations?user=ippq3CwAAAAJ&amp;hl=en">Google Scholar Profile</a>.</p>
 
 </div>
 
